@@ -1,5 +1,10 @@
 2006-10-11  Scott James Remnant  <scott@netsplit.com>
 
+	* init/cfgfile.c, init/cfgfile.h, init/control.c, init/control.h,
+	init/event.c, init/event.h, init/job.c, init/job.h, init/main.c,
+	init/process.c: Clean up documentation strings and parent pointer
+	types.
+
 	* compat/sysv/shutdown.c: Change nih_signal_add_callback to
 	nih_signal_add_handler.
 
